Changed name to ShortHand.js. Better README. Design of a demo page.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   }
   </style>  
   
-  <title>ProtoScript Test Page</title>
+  <title>Shorthand Test Page</title>
 
 
 
@@ -29,7 +29,7 @@
 
 <body>
 
-  <header><h1>This is a testing bed for ProtoScript</h1></header>
+  <header><h1>This is a testing bed for Shorthand</h1></header>
 
   <div id="abutton">toggle selected class on self</div>
 
@@ -58,10 +58,10 @@
   <!-- // <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js" type="text/javascript"></script> -->
   <script src="zepto.js" type="text/javascript"></script>
   <!-- // <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.1/jquery.min.js" type="text/javascript"></script> -->
-  <!-- protoscript.js -->
-  <script src="protoscript.js" type="text/javascript"></script>
-  <!-- protoscript blocks -->
-  <script type="text/protoscript">
+  <!-- Shorthand.js -->
+  <script src="Shorthand.js" type="text/javascript"></script>
+  <!-- Shorthand blocks -->
+  <script type="text/Shorthand">
 
     #hideme should hide itself on load
 
@@ -81,7 +81,7 @@
 
     here is a garbage line that should blah should should on on on be ignored
   </script>
-  <script type="text/protoscript">
+  <script type="text/Shorthand">
     #header2 should hide #section2 on click
 
     #link1 should goto 'http://splatcollision.com' on click
