tweaked gh link

--- a/demo.html
+++ b/demo.html
@@ -214,7 +214,7 @@ body {
 
 </header>
 
-<a href="https://github.com/splatcollision/shorthand.js"><section id='githublink' data='4467'><p>Particpate on GitHub!</p></section></a>
+<section id='githublink' data='4467'><p><a href="https://github.com/splatcollision/shorthand.js">Particpate on GitHub!</a></p></section>
 
 <section id='visibility' data='4463'><p>Show / Hide / Toggle visibility.</p>
 
