updated demo from gh-pages branch

--- a/demo.html
+++ b/demo.html
@@ -94,7 +94,7 @@ body {
 	border-radius : 16px;
 	}
 
-#screen_container_658 > #layer4467 {
+#screen_container_658 #githublink {
 	width: 15.020366598778004%;
 	height: auto;
 	left: 83.66205710998452%;
@@ -214,7 +214,7 @@ body {
 
 </header>
 
-<a href="https://github.com/splatcollision/shorthand.js"><section id='layer4467' data='4467'><p>Particpate on GitHub!</p></section></a>
+<section id='githublink' data='4467'><p><a href="https://github.com/splatcollision/shorthand.js">Particpate on GitHub!</a></p></section>
 
 <section id='visibility' data='4463'><p>Show / Hide / Toggle visibility.</p>
 
@@ -245,7 +245,7 @@ body {
   </div>
   
   <!-- Shorthand.js -->
-  <script src="Shorthand.js" type="text/javascript"></script>
+  <script src="shorthand.js" type="text/javascript"></script>
   <!-- Shorthand blocks -->
   <script type="text/Shorthand">
 
